--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
